contrast problems solved

--- a/style.css
+++ b/style.css
@@ -767,19 +767,19 @@ h4 {
 }
 
 .bgc-dark-slate-blue {
-    background-color: #364577;
+    background-color: #1b213c;
 }
 
 .bgc-atomic-tangerine {
-    background-color: #F3976C;
+    background-color: #9b3103;
 }
 
 .tc-white {
-    color: #F3976C!important;
+    color: #fafafa!important;
 }
 
 .btn-atomic-tangerine {
-    background: #F3976C;
+    background: #9b3103;
     color: #FFFFFF!important;
 }
 
@@ -805,8 +805,8 @@ h4 {
 }
 
 .icon-dark-slate-blue {
-    color: #364577!important;
-    border-color: #364577!important;
+    color: #1b213c!important;
+    border-color: #1b213c!important;
 }
 
 .bg-dots-bg {
